--- a/Tic-Tac-Toe.html
+++ b/Tic-Tac-Toe.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tic-Tac-Toe</title>
+    <title>Tic-Tac-Toe with Scoreboard</title>
     <style>
         body { font-family: Arial, sans-serif; display: flex; flex-direction: column; align-items: center; background-color: #f4f4f9; margin: 0; padding: 20px; }
         h1 { color: #333; }
@@ -12,18 +12,27 @@
         .cell:hover { background-color: #e0e0e0; }
         .cell.winner { background-color: #90ee90; }
         button { margin-top: 20px; padding: 10px 20px; font-size: 1rem; cursor: pointer; }
+        .scoreboard { margin-top: 20px; display: flex; gap: 20px; font-size: 1.2rem; }
     </style>
 </head>
 <body>
     <h1>Tic-Tac-Toe</h1>
     <div class="board" id="board"></div>
+    <div class="scoreboard">
+        <div>Player X: <span id="scoreX">0</span></div>
+        <div>Player O: <span id="scoreO">0</span></div>
+    </div>
     <button onclick="resetGame()">Reset Game</button>
 
     <script>
         const boardElement = document.getElementById('board');
+        const scoreXElement = document.getElementById('scoreX');
+        const scoreOElement = document.getElementById('scoreO');
+
         let board = JSON.parse(localStorage.getItem('board')) || Array(9).fill('');
         let currentPlayer = localStorage.getItem('currentPlayer') || 'X';
         let gameActive = localStorage.getItem('gameActive') !== 'false';
+        let scores = JSON.parse(localStorage.getItem('scores')) || { X: 0, O: 0 };
 
         function createBoard() {
             boardElement.innerHTML = '';
@@ -34,6 +43,7 @@
                 cellElement.addEventListener('click', () => makeMove(index));
                 boardElement.appendChild(cellElement);
             });
+            updateScoreboard();
             checkWinner();
         }
 
@@ -59,7 +69,9 @@
                     document.querySelectorAll('.cell')[b].classList.add('winner');
                     document.querySelectorAll('.cell')[c].classList.add('winner');
                     gameActive = false;
+                    scores[board[a]]++;
                     saveGameState();
+                    updateScoreboard();
                 }
             });
         }
@@ -72,10 +84,16 @@
             createBoard();
         }
 
+        function updateScoreboard() {
+            scoreXElement.textContent = scores.X;
+            scoreOElement.textContent = scores.O;
+        }
+
         function saveGameState() {
             localStorage.setItem('board', JSON.stringify(board));
             localStorage.setItem('currentPlayer', currentPlayer);
             localStorage.setItem('gameActive', gameActive);
+            localStorage.setItem('scores', JSON.stringify(scores));
         }
 
         createBoard();
